# marin

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml
lib/finelog/: AGENTS.md  pyproject.toml
lib/finelog/dashboard/: .gitignore  env.d.ts  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.ts
lib/finelog/dashboard/scripts/: demo.py
lib/finelog/dashboard/src/: App.vue  router.ts  template.html
lib/finelog/dashboard/src/composables/: useAutoRefresh.ts  useRpc.ts
lib/finelog/dashboard/src/pages/: LogsPage.vue  NamespaceDetailPage.vue  NamespacesPage.vue  QueryPage.vue
lib/finelog/dashboard/src/styles/: main.css
lib/finelog/dashboard/src/types/: stats.ts
lib/finelog/dashboard/src/utils/: arrow.ts  formatting.ts
lib/finelog/deploy/: Dockerfile  Dockerfile.dockerignore
lib/finelog/deploy/k8s/: 02-deployment.yaml.tmpl
lib/finelog/scripts/: safe_deploy.py
lib/finelog/src/finelog/: errors.py  types.py
lib/finelog/src/finelog/client/: __init__.py  log_client.py  proxy.py  remote_log_handler.py
lib/finelog/src/finelog/deploy/: _gcp.py  bootstrap.py  build.py  cli.py
lib/finelog/src/finelog/proto/: finelog_stats.proto  logging.proto
lib/finelog/src/finelog/rpc/: finelog_stats_connect.py  finelog_stats_pb2.py  finelog_stats_pb2.pyi  logging_pb2.py  logging_pb2.pyi
lib/finelog/src/finelog/server/: __init__.py  asgi.py  main.py  service.py  stats_service.py
lib/finelog/src/finelog/store/: __init__.py  catalog.py  compactor.py  duckdb_store.py  layout_migration.py  log_namespace.py  registry_db.py  rwlock.py  schema.py  sql_escape.py
lib/finelog/tests/: conftest.py  test_asgi.py  test_catalog_stats.py  test_client.py  test_compactor.py  test_concurrency.py  test_drop.py  test_duckdb_store.py  test_eviction.py  test_layout_migration.py  test_migrations.py  test_offload.py  test_persistence.py  test_query.py  test_register.py  test_server.py  test_write_rows.py
lib/iris/: AGENTS.md  Dockerfile  Dockerfile.dockerignore  OPS.md  README.md  TESTING.md  pyproject.toml
lib/iris/dashboard/: package-lock.json  package.json
lib/iris/dashboard/src/composables/: useRpc.ts
lib/iris/dashboard/src/types/: rpc.ts
lib/iris/dashboard/src/utils/: arrow.ts
lib/iris/docs/: constraints.md  coreweave.md  image-push.md
lib/iris/examples/: coreweave-ci.yaml  coreweave-rno2a.yaml  coreweave-usw09b.yaml
lib/iris/scripts/: benchmark_controller.py  benchmark_db_queries.py  benchmark_log_store.py  job_profile_summary.py
lib/iris/src/iris/actor/: server.py
lib/iris/src/iris/cli/: bug_report.py  build.py  cluster.py  job.py  main.py  process_status.py
lib/iris/src/iris/client/: client.py  local_client.py  resolver.py
lib/iris/src/iris/cluster/: dashboard_common.py  log_store_helpers.py  redaction.py
lib/iris/src/iris/rpc/: async_adapter.py  auth.py  codecs.py  compression.py  controller.proto  controller_connect.py  controller_pb2.py  controller_pb2.pyi  job.proto  job_pb2.py  job_pb2.pyi  stats.py  worker.proto  worker_pb2.py  worker_pb2.pyi
lib/iris/src/iris/runtime/: jax_init.py
lib/iris/tests/: conftest.py  test_auth.py  test_budget.py  test_jax_init.py
lib/iris/tests/client/: test_worker_pool.py
lib/iris/tests/cluster/: conftest.py  test_client.py  test_env_propagation.py  test_redaction.py  test_snapshot_reconciliation.py
lib/iris/tests/cluster/client/: test_job_info.py
lib/iris/tests/cluster/controller/: conftest.py  test_5470_preemption_reassignment.py  test_api_keys.py  test_auth.py  test_autoscaler.py  test_autoscaler_integration.py  test_checkpoint.py  test_dashboard.py  test_db.py  test_direct_controller.py  test_dry_run.py  test_endpoint_proxy.py  test_endpoint_store.py  test_preemption.py  test_reservation.py  test_reservation_holder_reset_regression.py  test_scheduler.py  test_scheduling_fairness.py  test_schema.py  test_service.py  test_snapshot_view.py  test_transitions.py  test_worker_health.py
lib/iris/tests/cluster/providers/: test_config.py  test_scaling_group.py
lib/iris/tests/cluster/worker/: test_env_probe.py  test_stats.py  test_worker.py
lib/iris/tests/e2e/: _docker_cluster.py  benchmark_controller.py  conftest.py  test_attempt_logs.py  test_chaos.py  test_cli.py  test_demo_notebook.py  test_docker.py  test_env_propagation.py  test_iris_run.py  test_local_client.py  test_smoke.py
lib/iris/tests/rpc/: test_codecs.py
lib/levanter/: AGENTS.md  README.md  pyproject.toml
lib/levanter/src/levanter/: checkpoint.py  config.py  distributed.py  eval_harness.py  grad_accum.py  tensorstore_serialization.py  trainer.py  trainer_state.py
lib/levanter/src/levanter/analysis/: visualization.py
lib/levanter/src/levanter/callbacks/: __init__.py
lib/levanter/src/levanter/compat/: fsspec_safetensor.py  hf_checkpoints.py
lib/levanter/src/levanter/data/: _preprocessor.py  _prp.py  dataset.py  packing.py  sharded_datasource.py
lib/levanter/src/levanter/grug/: grug_moe.py
lib/levanter/src/levanter/inference/: engine.py
lib/levanter/src/levanter/layers/: attention.py  rotary.py
lib/levanter/src/levanter/main/: export_lm_to_hf.py
lib/levanter/src/levanter/models/: apertus.py  flash_attention.py  gemma.py  llama.py  mixtral.py  olmo.py  olmo3.py  qwen.py
lib/levanter/src/levanter/optim/: grugmuon.py  kron.py  soap.py  util.py
lib/levanter/src/levanter/store/: cache.py  jagged_array.py  tree_store.py
lib/levanter/src/levanter/tracker/: helpers.py  json_file.py  tracker.py  wandb.py
lib/levanter/src/levanter/utils/: activation.py  background_iterable.py  cloud_utils.py  hf_utils.py  jax_utils.py  logging.py  py_utils.py  types.py
lib/levanter/tests/: test_distributed.py  test_eval_lm.py  test_export_to_hf.py  test_new_cache.py  test_perplexity_gap.py  test_qwen3.py  test_text.py  test_tracker.py  test_train_asr.py  test_train_lm.py  test_utils.py  test_viz_lm.py
lib/levanter/tests/grug/: test_grugformer_moe.py
lib/levanter/tests/kernels/: test_pallas_autotune_utils.py
lib/marin/: pyproject.toml
lib/marin/src/marin/: utils.py
rust/dupekit/: build_package.py  pyproject.toml
(+330 files in other folders)
