[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-finelog"
version = "0.99"
description = "Standalone log store + log service: structured-log ingest, query, and persistence."
requires-python = ">=3.11,<3.13"
dependencies = [
    "marin-rigging",
    "click>=8.3.1",
    "connect-python>=0.9.0",
    "duckdb>=1.0.0",
    "fsspec>=2024.0.0",
    "numpy>=1.26",
    "protobuf>=5.0",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.23.0",
    "zstandard>=0.22",
]

# Extras installed in the Docker image but split out so the dep-install layer
# (--no-install-project) is cached on pyproject.toml changes, not source edits.
[project.optional-dependencies]
server = [
    "gcsfs>=2024.0.0",
    "py-spy",
    "memray",
]

[project.scripts]
finelog-server = "finelog.server.main:main"
finelog = "finelog.deploy.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
    "marin-finelog[server]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finelog"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "config"

[tool.pytest.ini_options]
timeout = 10
timeout_method = "thread"
addopts = "-n auto --durations=25 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
